CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-24 02:47:02
+lastsearch = 2024-07-24 08:00:21
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -193.8%%
-title = TIN CHIỀU 23/5: “TÔI TIN M.U SẼ TRỞ LẠI ĐỈNH CAO”, PEP ...
-url = https://www.youtube.com/watch?v=Y4c6LlBM7qY
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [hawater.com.vn]
 match = -75.0%%
@@ -212,9 +212,9 @@ title = Lãnh 16 năm tù vì bán ma túy
 url = https://www.baobariavungtau.com.vn/phap-luat/202406/lanh-16-nam-tu-vi-ban-ma-tuy-1013445/
 
 [congan.com.vn]
-match = -137.5%%
-title = Xe "hổ vồ" gây tai nạn khiến 4 mẹ con tử vong
-url = https://congan.com.vn/giao-thong-24h/xe-ho-vo-gay-tai-nan-khien-4-me-con-tu-vong-lai-xe-dinh-ma-tuy_164925.html
+match = -200.0%%
+title = Trên đường đi học về, nam sinh ngã vào gầm xe đầu kéo ...
+url = https://congan.com.vn/giao-thong-24h/tren-duong-di-hoc-ve-nam-sinh-nga-vao-gam-xe-dau-keo-bi-can-tu-vong_164835.html
 
 [hvnh.edu.vn]
 match = -225.0%%
@@ -605,4 +605,9 @@ url = https://antv.gov.vn/phap-luat-3/kien-giang-ba-lan-cho-ma-tuy-thue-nhan-duo
 match = -225.0%%
 title = Nỗ lực tiêu thoát nước, tiếp tục cảnh báo sạt lở đất ở khu ...
 url = https://baobacgiang.vn/no-luc-tieu-thoat-nuoc-tiep-tuc-canh-bao-sat-lo-dat-o-khu-vuc-mien-nui-172455.bbg
+
+[www.lg.com]
+match = -206.2%%
+title = Màn hình mở rộng LG gram +view 16 inch, USB Type-C™, ...
+url = https://www.lg.com/vn/laptop-lg-gram/16mr70-asda5/
 
