--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-23 22:50:08
+lastsearch = 2024-07-24 08:00:53
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfpLLun7&sig=ACfU3U1cPfXn7l321rJeNkioImM2MWHWog&hl=en&sa=X&ved=2ahUKEwjXneDVvr2HAxULC3kGHcnBA9sQ6AF6BAg2EAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfpPFtn8&sig=ACfU3U0tA2hhIxkUjyWJwhdDY3dmdJGsWQ&hl=en&sa=X&ved=2ahUKEwjC8PL6vL6HAxVyFFkFHayWA0QQ6AF6BAgWEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
