--- a/images/chieu-lac-d2-09/config.ini
+++ b/images/chieu-lac-d2-09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-09.html
 lastopen = 2024-06-21 06:29:43
 
 [search]
-lastsearch = 2024-07-24 05:50:41
+lastsearch = 2024-07-24 08:03:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -62,9 +62,9 @@ title = Hanoi ZIP code - The most updated Hanoi postal codes
 url = https://phaata.com/en/zip-code/hanoi-zip-code-the-most-updated-hanoi-postal-codes-1014.html
 
 [www.instagram.com]
-match = -180.0%%
-title = The Final Shape from Destiny 2, 9”x12” in oils ...
-url = https://www.instagram.com/cayde.wav/p/C77aK7oO3ls/
+match = -233.3%%
+title = Vesta Lifestyle & Gifts | Cùng Vesta chào đón bạn mới - ...
+url = https://www.instagram.com/vesta.lifestyle/p/CtEP5tQpqft/
 
 [xuongdochoi.com]
 match = -200.0%%
@@ -77,9 +77,9 @@ title = Học cờ vua nâng cao
 url = https://www.cothongminh.com/tai-lieu-hoc-co-vua/26-hoc-co-vua-nang-cao?start=3
 
 [www.facebook.com]
-match = -226.7%%
-title = Giao Lưu Livestream Chiều 18.07 | PURA BILLIARDS - Giao ...
-url = https://www.facebook.com/purabilliards/videos/giao-lưu-livestream-chiều-1807/1207721590543543/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [duhocdoubleh.edu.vn]
 match = -193.3%%
@@ -490,4 +490,9 @@ url = https://www.marinetraffic.com/en/ais/details/ships/shipid:7192607/mmsi:574
 match = -213.3%%
 title = Kiwooza Planet D2 (Thiso Mall Thu Thiem) - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g293925-d26856619-Reviews-Kiwooza_Planet_D2_Thiso_Mall_Thu_Thiem-Ho_Chi_Minh_City.html
+
+[dienmaycholon.com]
+match = -100.0%%
+title = CHƯƠNG TRÌNH BẢO HÀNH MÁY ĐIỀU HOÀ ...
+url = https://dienmaycholon.com/tin-khuyen-mai/chuong-trinh-bao-hanh-may-dieu-hoa-electrolux
 
