--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-24 04:47:57
+lastsearch = 2024-07-24 08:01:40
 
 [bedding.vn]
 match = -123.1%%
@@ -137,9 +137,9 @@ title = Closed Corporate Integrity Agreements | Compliance
 url = https://oig.hhs.gov/compliance/corporate-integrity-agreements/closed-cias.asp
 
 [profiles.ucsf.edu]
-match = -23.1%%
-title = Michael Matthay, MD
-url = https://profiles.ucsf.edu/michael.matthay
+match = 0.0%%
+title = Jimmie Ye, PhD
+url = https://profiles.ucsf.edu/jimmie.ye
 
 [bse.berkeley.edu]
 match = -176.9%%
