--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-24 01:37:17
+lastsearch = 2024-07-24 08:02:43
 
 [www.georgianicols.com]
 match = -69.2%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -15.4%%
-title = Ipek Gani (@ganipek)
-url = https://www.instagram.com/ganipek/
+match = -200.0%%
+title = Ayu Gani 🐘 | Should I keep this hair for 2024?
+url = https://www.instagram.com/ganegani/p/C11X7oFSqYw/
 
 [www.nebf.com]
 match = -50.0%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0460-202-16141 Size 16 Contact 16-20 Ga
-url = https://www.deutschconnectorstore.com/p-70-deutsch-0460-202-16141-contact-20-16-ga.html
+match = -253.8%%
+title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
+url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -252,9 +252,9 @@ title =
 url = https://www.denverpost.com/author/georgia-nicols/
 
 [www.prowireusa.com]
-match = -146.2%%
-title = 0460-204-12141 Size 12 Contact 14-12 Ga
-url = https://www.prowireusa.com/p-75-deutsch-0460-204-12141-contact-14-12-ga.html
+match = -200.0%%
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.prowireusa.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [www.icc-cpi.int]
 match = -92.3%%
