--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-24 04:44:18
+lastsearch = 2024-07-24 08:04:55
 
 [www.reddit.com]
 match = -82.6%%
@@ -485,4 +485,9 @@ url = https://www.indiatoday.in/television/celebrity/story/korean-star-nam-joo-h
 match = -78.3%%
 title = Template - IIS Windows Server - City of Federal Way
 url = https://docs.cityoffederalway.com/WebLink/DocView.aspx?id=714432&dbid=0&repo=cityoffederalway
+
+[fintel.io]
+match = -100.0%%
+title = Susquehanna International Group, Llp Portfolio Holdings
+url = https://fintel.io/i/susquehanna-international-group-llp
 
