--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-24 03:31:58
+lastsearch = 2024-07-24 09:10:40
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/mưa-bụi-thuong-hai
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUXLrJYH&sig=ACfU3U0v-PmVc743lXmke3De9fRqdvk0HA&hl=en&sa=X&ved=2ahUKEwi116XtgL6HAxWDtokEHYoeBtoQ6AF6BAgZEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiUXNsC-y&sig=ACfU3U24Lm23gv85vj6SGhpUyvDIjZ6CpA&hl=en&sa=X&ved=2ahUKEwiy1KHHzL6HAxWmEFkFHWudCeQQ6AF6BAgYEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
@@ -354,7 +354,7 @@ url = https://besthome.com.vn/noi-luoc-ga-1602-kings/
 [www.3m.com.vn]
 match = 5.6%%
 title = Tất cả sản phẩm 3M
-url = https://www.3m.com.vn/3M/vi_VN/p/
+url = https://www.3m.com.vn/3M/vi_VN/p/c/
 
 [nj.gov]
 match = 12.5%%
