--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-07-24 01:46:58
+lastsearch = 2024-07-24 09:03:59
 
 [dreamland.vn]
 match = 7.5%%
@@ -18,8 +18,8 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 
 [demluxury.com.vn]
 match = 31.6%%
-title = Bộ chăn ga gối Cotton MOC 03 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
+title = Bộ chăn ga gối Cotton MOC 06 Dreamland
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-06-dreamland/
 
 [www.facebook.com]
 match = -8.0%%
@@ -43,8 +43,8 @@ url = https://aamontillo.net/videos/?title=Predicting Response to the Antidepres
 
 [thegioidemloxo.com]
 match = 62.8%%
-title = Bộ chăn ga gối Dreamland cotton lụa NK PT34
-url = https://thegioidemloxo.com/home/detail.asp?iData=6277&iChannel=61&nChannel=Products&view=rows
+title = Bộ chăn ga gối Dreamland cotton lụa NK PT10
+url = https://thegioidemloxo.com/home/detail.asp?iData=6270&iCat=841&iChannel=61&nChannel=Products
 
 [demxinh.vn]
 match = 52.5%%
@@ -90,4 +90,14 @@ url = https://www.tiktok.com/@simulatedham/video/7249167030975270149
 match = 37.0%%
 title = Bộ Chăn Ga Gối Dream World DW 15-1 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-dream-world-dw-151.html
+
+[thegioidemonline.vn]
+match = 54.3%%
+title = Bộ Chăn ga gối Dreamland Cotton Lụa PT11 - Hà Nội
+url = https://thegioidemonline.vn/bo-chan-ga-goi-dreamland-theu-ma-pt11.html
+
+[www.koala.vn]
+match = 37.0%%
+title = Bộ Chăn Ga Gối Dream World DW 15-3 (120*190 cm) - Koala
+url = https://www.koala.vn/bo-chan-ga-goi-dream-world-dw-153.html
 
