--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-24 01:26:26
+lastsearch = 2024-07-24 09:47:43
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu ghi nhạt
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+match = -61.1%%
+title = Bộ ga phủ Silky G124 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-silky-g124
 
 [aeoneshop.com]
 match = -105.6%%
@@ -53,8 +53,8 @@ url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x20
 
 [everonvn.com.vn]
 match = 27.8%%
-title = Bộ Everon Esm-20011
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
+title = Bộ Everon ESC-20007
+url = https://everonvn.com.vn/everon/856/bo-everon-esc-20007
 
 [www.everonvni.vn]
 match = -77.8%%
