--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-07-24 05:32:51
+lastsearch = 2024-07-24 09:51:54
 
 [demxanh.com]
 match = -9.1%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooOLm_lE8dfI0eMKJlMC5WqBvWxT9IUC9zCujg4pYjauRVL0-Xs
 
 [www.diepxuan.com]
 match = 100.0%%
