--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-24 05:46:20
+lastsearch = 2024-07-24 09:45:10
 
 [www.youtube.com]
 match = -40.7%%
@@ -17,9 +17,9 @@ title = Phân Loại Vỏ Gối Theo Chất Liệu - Ưu, Nhược Điểm Từn
 url = https://ru9.vn/blogs/magazine/phan-loai-vo-goi-theo-chat-lieu-uu-nhuoc-diem-tung-loai
 
 [jysk.vn]
-match = -33.3%%
-title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+match = -59.3%%
+title = Vỏ Chăn Ga Gối Trơn, Cotton Cao Cấp Bền, Đẹp Giá Rẻ | JYSK
+url = https://jysk.vn/bo-vo-chan-goi-cotton-det-tron
 
 [elambo.vn]
 match = -3.7%%
@@ -37,19 +37,19 @@ title = Kinh hoàng ruột gối siêu rẻ đen ngòm
 url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a127941.html
 
 [shopee.vn]
-match = -55.6%%
-title = Chăn ga gối đệm cưới - Giá Tốt, Miễn Phí Vận Chuyển, Đủ ...
-url = https://shopee.vn/list/chăn ga gối/đệm cưới
+match = -22.2%%
+title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
 
 [demxanh.com]
-match = -74.1%%
-title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
-url = https://demxanh.com/cach-lam-phong-ruot-goi.html
+match = -44.4%%
+title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
+url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -66.7%%
-title = Cách chặn và bỏ chặn tin nhắn từ người lạ, bạn bè trên ...
-url = https://www.thegioididong.com/game-app/cach-chan-va-bo-chan-tin-nhan-tu-nguoi-la-ban-be-tren-zalo-1271744
+match = -55.6%%
+title = Cách xóa chặn cuộc gọi trên iPhone, điện thoại Android ...
+url = https://www.thegioididong.com/hoi-dap/tat-che-do-chan-cuoc-goi-tren-samsung-galaxy-note-604459
 
 [dienmaycholon.vn]
 match = -44.4%%
