--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-24 06:31:27
+lastsearch = 2024-07-24 10:17:45
 
 [www.kymdan.com]
 match = 4.2%%
@@ -67,9 +67,9 @@ title = Làm mới phòng ngủ với bộ chăn, drap, gối mùa thu
 url = https://vnexpress.net/lam-moi-phong-ngu-voi-bo-chan-drap-goi-mua-thu-4175265.html
 
 [vuanem.com]
-match = -34.4%%
-title = Bộ chăn ga Lụa tencel cao cấp Amando Lagom 5 chi tiết ...
-url = https://vuanem.com/bo-ga-chun-tencel-amando-lagom-16020035-5ct-ds-tc003.html
+match = -21.9%%
+title = Bộ chăn ga chun chần Lụa Tencel cao cấp Amando Élan 5 ...
+url = https://vuanem.com/bo-chan-ga-chun-chan-lua-tencel-cao-cap-amando-elan-5-chi-tiet-tc002.html
 
 [kymdan.us]
 match = 9.4%%
