--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-24 06:20:49
+lastsearch = 2024-07-24 10:16:29
 
 [demxanh.com]
 match = -3.3%%
@@ -87,9 +87,9 @@ title = Chiếu điều hòa: Bóc mẽ sự thật
 url = https://shoptretho.com.vn/tin-tuc/chieu-dieu-hoa-boc-me-su-that
 
 [www.youtube.com]
-match = -40.0%%
-title = Các chị bán hàng online bảo chiếu điều hòa nằm mát lắm ...
-url = https://www.youtube.com/watch?v=a8BE2eDtn3Y
+match = -46.7%%
+title = Thực hư về khả năng làm mát của chiếu điều hòa | An toàn ...
+url = https://www.youtube.com/watch?v=ccaTWASdw7I
 
 [vtvhyundai.vn]
 match = -6.7%%
