--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-24 01:37:08
+lastsearch = 2024-07-24 10:20:05
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -22,9 +22,9 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [everonchinhhang.vn]
-match = 5.0%%
-title = Đệm bông ép Sóng Everon
-url = https://everonchinhhang.vn/products/dem-bong-ep-song-everon
+match = -50.0%%
+title = Đệm - Nệm – Tổng Đại Lý Everon Chính Hãng
+url = https://everonchinhhang.vn/collections/dem-nem-everon-chinh-hang
 
 [suongtuyet.com]
 match = 15.0%%
@@ -72,8 +72,8 @@ title = Đệm Sóng Everon
 url = https://everon.online/products/dem-song-everon
 
 [everonxuankhieu.vn]
-match = -90.0%%
-title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ ...
+match = -105.0%%
+title = ĐỆM BÔNG ÉP EVERON - CÔNG TY CỔ PHẦN DỊCH VỤ VÀ ...
 url = https://everonxuankhieu.vn/dem-bong-ep-everon/
 
 [nemgiagoc.vn]
