--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-24 05:14:23
+lastsearch = 2024-07-24 10:35:54
 
 [www.diepxuan.com]
 match = 3.6%%
 title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-mau.html
+url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOopLzhfh6H-D4lFAf9CY4Jf5tkFyseJxMMA_6xRZnkQMtxthJFpM
 
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOoox8h90_C3o5n6uQ9uTn0qsV8Bgvk18KhKHWnlBxZJN9noA0DxH
 
 [shopee.vn]
 match = -7.1%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-
 [foreverbedding.net]
 match = -32.1%%
 title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOopMUZGCTT9T_mkWF_hzciLxSiymcZkXvL7d7uwg6dsrYE-yrfrZ
 
 [changagoidemsonghong.com]
 match = 0.0%%
@@ -69,7 +69,7 @@ url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-lo
 [demxanh.com]
 match = -42.9%%
 title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối đệm màu trắng ...
-url = https://demxanh.com/chan-ga-goi-dem-mau-trang.html
+url = https://demxanh.com/chan-ga-goi-dem-mau-trang.html?srsltid=AfmBOoo6QAcry13yCZcxzAX3SDxdK7zIKKD3zuxru8rEUimC2DQl27PB
 
 [chiaki.vn]
 match = 10.7%%
