--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-24 05:15:30
+lastsearch = 2024-07-24 10:37:31
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -22,9 +22,9 @@ title = Effect of the COVID-19 Outbreak on the Incidence of Other ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
 
 [thuvienphapluat.vn]
-match = -82.6%%
-title = Nghị quyết 04/2022/NQ-HĐND nội dung mức chi tổ chức ...
-url = https://thuvienphapluat.vn/van-ban/Tai-chinh-nha-nuoc/Nghi-quyet-04-2022-NQ-HDND-noi-dung-muc-chi-to-chuc-ky-thi-cuoc-thi-giao-duc-Thai-Binh-513755.aspx
+match = -78.3%%
+title = Chỉ thị 18/CT-UBND 2019 xử lý vi phạm đề điều quản ...
+url = https://thuvienphapluat.vn/van-ban/Tai-nguyen-Moi-truong/Chi-thi-18-CT-UBND-2019-xu-ly-vi-pham-de-dieu-quan-ly-bai-song-bai-trieu-ven-bien-tinh-Thai-Binh-429663.aspx
 
 [sotuphap.thaibinh.gov.vn]
 match = -47.8%%
