--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-24 09:11:02
+lastsearch = 2024-07-24 10:34:48
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -11.1%%
-title = NEM Fashion added a new photo.
-url = https://www.facebook.com/photo.php?fbid=749133867249313&id=100064581196454&set=a.651941746968526
+match = -27.8%%
+title = Siêu Thị Nệm | Ho Chi Minh City
+url = https://www.facebook.com/sieuthinem/
 
 [thegioinem.com]
 match = -105.6%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -116.7%%
-title = 📍nem nướng út vân: 105 đông tác. ⭐️: 20-50 cành ...
-url = https://www.tiktok.com/@longlongneee/video/7247048935045467397
+match = -16.7%%
+title = Nem Nuong Que Huong Air Fryer
+url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
