--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-07-24 05:47:11
+lastsearch = 2024-07-24 10:37:09
 
 [www.linkedin.com]
 match = -145.5%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -336.4%%
-title = San Francisco Bay Area Running Race Calendar - 2024/25
-url = https://www.runguides.com/san-francisco/runs
+match = -181.8%%
+title = 2024 Peacock Gap Trail Run | San Rafael
+url = https://www.runguides.com/event/3294/peacock-gap-trail-run
 
 [www.kategridley.com]
 match = -125.0%%
@@ -400,4 +400,9 @@ url = https://www.instagram.com/tamtran3858/
 match = -36.4%%
 title = Mt. Tam Trail Run Results
 url = https://www.adventuresignup.com/Race/Results/138843/?resultSetId=422699
+
+[www.kcur.org]
+match = -181.8%%
+title = Remembering Vietnam Through Photographs
+url = https://www.kcur.org/2013-11-11/remembering-vietnam-through-photographs
 
