--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-24 01:54:10
+lastsearch = 2024-07-24 10:31:37
 
 [shopee.vn]
 match = -90.5%%
@@ -137,9 +137,9 @@ title = GIƯỜNG NGỦ BỌC DA CAO CẤP HIỆN ĐẠI - LB12
 url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb11
 
 [www.lazada.vn]
-match = -76.2%%
-title = Thảm nhung trải giường loại 1m8 x2m các mẫu có trong ...
-url = https://www.lazada.vn/products/tham-nhung-trai-giuong-loai-1m8-x2m-cac-mau-co-trong-linh-san-pham-i347034430.html
+match = -109.5%%
+title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
 
 [dogohiephien.vn]
 match = -104.8%%
