--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-24 10:14:34
+lastsearch = 2024-07-24 11:37:55
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -68,13 +68,13 @@ url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
 match = -225.0%%
-title = Quãng thời gian chăm sóc Tổng bí thư Nguyễn Phú Trọng qua ...
-url = https://www.youtube.com/watch?v=D4-5Fcd9AVQ
+title = Biến Cố Gia Đình - Tập 16 | Lồng Tiếng | Phim Bộ Tình Cảm ...
+url = https://www.youtube.com/watch?v=LnV3t5bBfcs
 
 [books.google.com]
-match = -81.2%%
-title = Tam tu kinh: - Google Books Result
-url = https://books.google.com/books?id=6LwwAQAAMAAJ&pg=PP378&lpg=PP378&dq=chieu+lac+soc+16&source=bl&ots=hpvyMvraO0&sig=ACfU3U1t6i-bsol9doqQlTacca4uYQkiwQ&hl=en&sa=X&ved=2ahUKEwjRoeXr2r6HAxUuEVkFHblIAdkQ6AF6BAgjEAM
+match = -250.0%%
+title = Ngô Thì Nhậm, tác phẩm - Volume 1 - Page 83 - Google Books Result
+url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSVIn12eg&sig=ACfU3U1miqgWf23CQ4gWkOklX9Y2z-JNGA&hl=en&sa=X&ved=2ahUKEwiAvL687b6HAxVDrYkEHUUCCmYQ6AF6BAgdEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
