--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-24 09:08:57
+lastsearch = 2024-07-24 11:33:10
 
 [chieutruc.info]
-match = -44.0%%
-title = Tổng kho chiếu trúc tre Việt Nam cao cấp chính hãng
-url = https://chieutruc.info/
+match = -60.0%%
+title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt ...
+url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
 match = -28.0%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
 url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
 
 [shopee.vn]
-match = -64.0%%
-title = Chiếu trúc cao bằng - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/cao bằng
+match = -48.0%%
+title = Chiếu trúc thanh Cao Bằng in hoa, 4 loại kích cỡ chiều ...
+url = https://shopee.vn/Chiếu-trúc-thanh-Cao-Bằng-in-hoa-4-loại-kích-cỡ-chiều-ngang-1.8m-1.6m-1.5m-và-1.2m-i.17414239.2725505616
 
 [suongtuyet.com]
 match = 60.0%%
