--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-24 11:51:47
+lastsearch = 2024-07-24 12:14:40
 
 [www.instagram.com]
 match = -23.1%%
-title = Hoi Chan (@hoichandraws)
-url = https://www.instagram.com/hoichandraws/?hl=en
+title = Yuki Chan (@meow_kikiki)
+url = https://www.instagram.com/meow_kikiki/
 
 [www.linkedin.com]
 match = -192.3%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
