--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-24 11:37:01
+lastsearch = 2024-07-24 12:19:14
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/Ren_Gill
 
 [books.google.com]
-match = -280.0%%
-title = The Letter to Ren An and Sima Qian’s Legacy
-url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiQ1fyX8&sig=ACfU3U3Lfm_N3ocmnUMeOjHUdE-ePDYY5A&hl=en&sa=X&ved=2ahUKEwj22MCi7b6HAxXkkokEHT8vD7IQ6AF6BAgbEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfpQLon9&sig=ACfU3U1Id63q85W0c2OMoyjjNtlnqi_jYw&hl=en&sa=X&ved=2ahUKEwit17_a9r6HAxXglokEHVhZDY4Q6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
