--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-24 11:36:41
+lastsearch = 2024-07-24 12:19:05
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -127,9 +127,9 @@ title = @Jacquemus has just opened their pop up store in Seoul ...
 url = https://www.tiktok.com/@culted/video/7292084447212571937?lang=en
 
 [30rates.com]
-match = -47.8%%
-title = NEM PRICE PREDICTION TOMORROW, WEEK AND ...
-url = https://30rates.com/nem-price-prediction-tomorrow-week-month-xem-forecast
+match = -39.1%%
+title = RIOT STOCK PRICE FORECAST TOMORROW, WEEK ...
+url = https://30rates.com/riot-stock
 
 [www.google.com]
 match = 0.0%%
