CI images update

--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-24 12:12:13
+lastsearch = 2024-07-24 12:35:25
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -185,4 +185,9 @@ url = https://www.rockdalenewtoncitizen.com/plus/scientists-spot-cause-of-lupus-
 match = -89.5%%
 title = Ga Chống Thấm Của Nhật Giá Gốc Hot Nhất Năm Nay
 url = https://www.sendo.vn/ga-chong-tham-cua-nhat.htm
+
+[www.caledonianrecord.com]
+match = -168.4%%
+title = Sports betting roundup: Xander Schauffele goes from third ...
+url = https://www.caledonianrecord.com/sports/world/sports-betting-roundup-xander-schauffele-goes-from-third-favorite-to-first-place-at-british-open/article_3af60241-538e-50d4-9217-6ec3496edd5d.html
 
