--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-07-24 05:12:41
+lastsearch = 2024-07-24 12:30:38
 
 [thefelix.vn]
 match = -50.0%%
@@ -127,8 +127,8 @@ title = NỆM CAO SU THIÊN NHIÊN FELIX
 url = https://bsamedia.vn/nem-cao-su-thien-nhien-felix/
 
 [noithatnhatbao.com]
-match = 34.2%%
-title = Nệm cao su thiên nhiên - Chăn ra gối nệm Nhật Bảo
+match = 18.2%%
+title = Nệm cao su thiên nhiên
 url = https://noithatnhatbao.com/product-category/nem-cao-su-thien-nhien-pleiku-gia-lai/
 
 [nemkhuyenmai.com]
