--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-24 09:50:35
+lastsearch = 2024-07-24 12:37:43
 
 [www.diepxuan.com]
 match = 18.8%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = 0.0%%
-title = Chongyun X Aether
-url = https://www.tiktok.com/discover/chongyun-x-aether
+match = -31.2%%
+title = Huda Beauty Best Lip Liner
+url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
 
 [archiveofourown.org]
 match = -137.5%%
