--- a/images/nem-diamold-tc-140x190x07/config.ini
+++ b/images/nem-diamold-tc-140x190x07/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-diamold-tc-140x190x07.html
 lastopen = 2024-06-10 11:58:28
 
 [search]
-lastsearch = 2024-07-24 06:35:04
+lastsearch = 2024-07-24 12:33:08
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Nệm Diamold TC 140x190x07 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-diamold-tc-140x190x07.html
 
 [www.magazineluiza.com.br]
-match = -96.0%%
-title = Pillow Top Protetor De Colchão Cama Casal Box Nobless ...
-url = https://www.magazineluiza.com.br/pillow-top-protetor-de-colchao-cama-casal-box-nobless-6cm-appel/p/fka1edjdee/cm/pllt/
+match = -72.0%%
+title = Pillow Top Protetor de Colchão Macio Soft Casa Dona
+url = https://www.magazineluiza.com.br/pillow-top-protetor-de-colchao-macio-soft-casa-dona/p/dec4g6j26b/cm/pllt/
 
 [www.killerspin.com]
 match = -84.0%%
