CI images update

--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-24 10:14:45
+lastsearch = 2024-07-24 13:18:30
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu ghi nhạt
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+match = -61.1%%
+title = Bộ ga phủ Melody M214 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-melody-m214
 
 [aeoneshop.com]
 match = -105.6%%
@@ -82,9 +82,9 @@ title = 160x200
 url = https://www.mym.com.vn/kichthuoc/160x200/page/3
 
 [jysk.vn]
-match = -94.4%%
-title = Duvet cover set BIANA Sand DBL - JYSK.vn
-url = https://jysk.vn/en-US/duvet-cover-set-biana-sand-dbl
+match = -116.7%%
+title = Mattress pad 160x200 PLUS T15 DREAMZONE - JYSK.vn
+url = https://jysk.vn/en-US/mattress-pad-160x200-plus-t15-dreamzone
 
 [edena.vn]
 match = -66.7%%
@@ -107,9 +107,9 @@ title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 mát ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
-match = -127.8%%
-title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
-url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
+match = -116.7%%
+title = Bộ chăn ga 100%% Cotton Sateen - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-sateen
 
 [everonhanquoc.vn]
 match = -22.2%%
