--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-24 10:18:29
+lastsearch = 2024-07-24 13:19:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Màn tự bung dinh vuong18
 url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 
 [www.mungbaobao.com]
-match = 29.2%%
-title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
-url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
+match = 20.8%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html?sp=new
 
 [shopee.vn]
 match = -54.2%%
@@ -27,9 +27,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.mantubung.com]
-match = -12.5%%
-title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
-url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
+match = -58.3%%
+title = Mùng Đỉnh Vuông Cao Cấp 1m8 x 2m x 1m7 CHÂN VIỀN
+url = https://www.mantubung.com/mung-chup-dinh-rong-1m8-x-2m-bao-bao-2-cua-67344.html
 
 [www.lazada.vn]
 match = 20.8%%
@@ -137,9 +137,9 @@ title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
 url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
 
 [zingtruyen.top]
-match = 16.7%%
-title = Đọc truyện - Dai Ma Vuong 18 19 20
-url = https://zingtruyen.top/chapter/dai-ma-vuong-18-19-20/2974203/dai-ma-vuong-18-19-20/804787.html
+match = -25.0%%
+title = Đọc truyện Long vương 18+ [full] - Chương 14
+url = https://zingtruyen.top/chapter/long-vuong-18-full/6447373/chuong-14/19463119.html
 
 [www.instagram.com]
 match = 4.2%%
