--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-24 11:45:30
+lastsearch = 2024-07-24 13:17:45
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -32,9 +32,9 @@ title = Trung tâm thiết bị chiếu sáng - HT Lighting | Da Nang
 url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
 
 [hatari.com.vn]
-match = -126.7%%
-title = Quạt lửng Hatari HT- S16M7 - hatari.com.vn
-url = https://hatari.com.vn/san-pham/quat-lung-hatari-ht-s16m7
+match = -13.3%%
+title = Quạt lửng Hatari HT-S14M3
+url = https://hatari.com.vn/san-pham/quat-lung-hatari-ht-s14m3
 
 [www.htlightlevel.vn]
 match = -153.3%%
