--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-07-24 09:49:40
+lastsearch = 2024-07-24 13:19:24
 
 [demxanh.com]
-match = 24.1%%
-title = Chiếu điều hòa cao su non đa sắc xám hình hoa
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html
+match = 6.9%%
+title = Chiếu điều hòa cao su non đa sắc xanh cốm hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xanh-com-hinh-hoa.html
 
 [tiki.vn]
 match = 20.7%%
