--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-24 06:52:57
+lastsearch = 2024-07-24 13:23:09
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -12,9 +12,9 @@ title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [www.youtube.com]
-match = -147.6%%
-title = Nhiều diện tích lúa bị thiệt hại do mưa kéo dài | Tin Đời sống ...
-url = https://www.youtube.com/watch?v=MrJqEr3Vpmc
+match = -128.6%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 14 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=GzepFXdUfeQ
 
 [roc-taiwan.org]
 match = -66.7%%
