--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-24 11:34:37
+lastsearch = 2024-07-24 13:18:53
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -90.5%%
-title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
 match = -19.0%%
@@ -67,9 +67,9 @@ title = Hứa Quang Hán 'ghi điểm' trong phim Đài Loan có doanh ...
 url = https://thanhnien.vn/hua-quang-han-ghi-diem-trong-phim-dai-loan-co-doanh-thu-chieu-som-cao-nhat-1852404081738149.htm
 
 [www.youtube.com]
-match = -114.3%%
-title = Cao thủ gắp đồ 18+ ở Đài Loan và cái kết ‘’ Cực Kỳ Thuyết ...
-url = https://www.youtube.com/watch?v=NJHWqhEqVy0
+match = -104.8%%
+title = VỪA GẶP ĐÃ YÊU TẬP 18 | Phim Bộ Tình Cảm Trung Quốc ...
+url = https://www.youtube.com/watch?v=phzQ4MxJ1LQ
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -212,9 +212,9 @@ title = Phim Đài Loan
 url = https://motchilltv.to/quoc-gia/dai-loan
 
 [www.bbc.com]
-match = -123.8%%
-title = Chú rể 40 tuổi đẹp trai chi 700.000 tệ cưới cô dâu Việt 18 ...
-url = https://www.bbc.com/vietnamese/articles/cyx0jw1ypq9o
+match = -138.1%%
+title = Người Việt bị từ chối tị nạn tại Anh: Buộc hồi hương trong ...
+url = https://www.bbc.com/vietnamese/articles/cx02e0dk871o
 
 [cau-ca.com]
 match = -42.9%%
