--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-24 08:00:21
+lastsearch = 2024-07-24 13:21:32
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+match = -150.0%%
+title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
+url = https://www.youtube.com/watch?v=6598XYpaW3E
 
 [hawater.com.vn]
 match = -75.0%%
@@ -610,4 +610,9 @@ url = https://baobacgiang.vn/no-luc-tieu-thoat-nuoc-tiep-tuc-canh-bao-sat-lo-dat
 match = -206.2%%
 title = Màn hình mở rộng LG gram +view 16 inch, USB Type-C™, ...
 url = https://www.lg.com/vn/laptop-lg-gram/16mr70-asda5/
+
+[www.csgt.vn]
+match = 12.5%%
+title = ĐIỂM BÁO NGÀY 16/7/2024
+url = https://www.csgt.vn/m/tintuc/19164/DIEM-BAO-NGAY-16/7/2024.html
 
