--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-24 11:30:51
+lastsearch = 2024-07-24 13:19:12
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -502,9 +502,9 @@ title = Phan Thanh Nhàn (@ptn.18) • Instagram photos and videos
 url = https://www.instagram.com/ptn.18/
 
 [congan.com.vn]
-match = -250.0%%
-title = Tạm giữ tài xế xe tải tông một phụ nữ tử vong, rồi lái xe bỏ ...
-url = https://congan.com.vn/giao-thong-24h/tam-giu-tai-xe-xe-tai-tong-chet-mot-phu-nu-roi-bo-tron_164879.html
+match = -200.0%%
+title = Trên đường đi học về, nam sinh ngã vào gầm xe đầu kéo ...
+url = https://congan.com.vn/giao-thong-24h/tren-duong-di-hoc-ve-nam-sinh-nga-vao-gam-xe-dau-keo-bi-can-tu-vong_164835.html
 
 [2sao.vn]
 match = -106.2%%
@@ -575,4 +575,14 @@ url = https://www.aeon.com.vn/
 match = -212.5%%
 title = Tình cảm đặc biệt của Tổng Bí thư Nguyễn Phú Trọng với ...
 url = https://www.nghean.gov.vn/tin-noi-bat/tinh-cam-dac-biet-cua-tong-bi-thu-nguyen-phu-trong-voi-nghe-an-667116
+
+[la34.com.vn]
+match = -218.8%%
+title = Trí thức, kiều bào cảm phục tấm gương 'vì nước vì dân' của ...
+url = https://la34.com.vn/tri-thuc-kieu-bao-cam-phuc-tam-guong-vi-nuoc-vi-dan-cua-tong-bi-thu-nguyen-phu-trong-123815.html
+
+[eurotravel.com.vn]
+match = -193.8%%
+title = Khám phá Yellowstone – Tuyệt tác thiên nhiên của nước Mỹ
+url = https://eurotravel.com.vn/kham-pha-yellowstone-tuyet-tac-thien-nhien-cua-nuoc-my/
 
