--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-24 02:33:42
+lastsearch = 2024-07-24 13:25:16
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -27,9 +27,9 @@ title = Acupuncture Points - Ren 12
 url = https://www.acupuncture.com/education/points/ren/ren12.htm
 
 [www.facebook.com]
-match = -350.0%%
-title = REN 12 - CV 12 - The Front-Mu point of Stomach ...
-url = https://www.facebook.com/AcuProAcademy/videos/ren-12-cv-12-the-front-mu-point-of-stomach-acupuncturerocks/654368444704775/
+match = -410.0%%
+title = Conception Vessel 12,... - Miridia Acupuncture Technology
+url = https://www.facebook.com/miridiatech/posts/conception-vessel-12-also-known-as-ren-12-or-cv-12-is-like-the-fix-all-point-for/10156579677171508/
 
 [www.journalofchinesemedicine.com]
 match = -250.0%%
