CI images update

--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-24 13:21:32
+lastsearch = 2024-07-24 13:40:41
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -150.0%%
-title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
-url = https://www.youtube.com/watch?v=6598XYpaW3E
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [hawater.com.vn]
 match = -75.0%%
@@ -182,9 +182,9 @@ title = Bí thư Quận ủy Quận 3 Nguyễn Thanh Xuân thăm khu phố ...
 url = https://www.hcmcpv.org.vn/tin-tuc/bi-thu-quan-uy-quan-3-nguyen-thanh-xuan-tham-khu-pho-1-phuong-3-1491925052
 
 [hcmcpv.org.vn]
-match = -193.8%%
-title = Câu lạc bộ Truyền thống kháng chiến TPHCM - Khối Nhà ...
-url = https://hcmcpv.org.vn/tin-tuc/cau-lac-bo-truyen-thong-khang-chien-tphcm-khoi-nha-bao-cao-tuoi-hop-mat-ky-niem-99-nam-ngay-bao-ch-1491923804
+match = -225.0%%
+title = Tổng Bí thư Nguyễn Phú Trọng - một nhà lý luận có trí tuệ ...
+url = https://hcmcpv.org.vn/tin-tuc/tong-bi-thu-nguyen-phu-trong-mot-nha-ly-luan-co-tri-tue-man-tiep-day-ban-linh-1491925302
 
 [www.tuyensinh.dau.edu.vn]
 match = -187.5%%
@@ -602,9 +602,9 @@ title = Xét xử đối tượng vận chuyển ma túy
 url = https://antv.gov.vn/phap-luat-3/kien-giang-ba-lan-cho-ma-tuy-thue-nhan-duoc-20-nam-tu-8FDFA73CD.html
 
 [baobacgiang.vn]
-match = -225.0%%
-title = Nỗ lực tiêu thoát nước, tiếp tục cảnh báo sạt lở đất ở khu ...
-url = https://baobacgiang.vn/no-luc-tieu-thoat-nuoc-tiep-tuc-canh-bao-sat-lo-dat-o-khu-vuc-mien-nui-172455.bbg
+match = -193.8%%
+title = Bàn giải pháp bảo tồn, phát huy giá trị Lễ hội Yên Thế
+url = https://baobacgiang.vn/ban-giai-phap-bao-ton-phat-huy-gia-tri-le-hoi-yen-the-190810.bbg
 
 [www.lg.com]
 match = -206.2%%
@@ -615,4 +615,14 @@ url = https://www.lg.com/vn/laptop-lg-gram/16mr70-asda5/
 match = 12.5%%
 title = ĐIỂM BÁO NGÀY 16/7/2024
 url = https://www.csgt.vn/m/tintuc/19164/DIEM-BAO-NGAY-16/7/2024.html
+
+[vksndtc.gov.vn]
+match = -168.8%%
+title = Tin hoạt động VKSND địa phương Hải Dương – Hòa Bình
+url = https://vksndtc.gov.vn/tin-hoat-dong-vksnd-dia-phuong/tin-hoat-dong-vksnd-dia-phuong-hai-duong--hoa-binh-d3-t12340.html
+
+[hoabinhtv.vn]
+match = -181.2%%
+title = Nga hoàn tất phát triển hệ thống tên lửa bờ Rubezh-M
+url = https://hoabinhtv.vn/tin-quoc-te/quan-su-the-gioi-hom-nay-24-7-nga-hoan-tat-phat-trien-he-thong-ten-lua-bo-rubezh-m
 
