--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-24 12:18:12
+lastsearch = 2024-07-24 13:43:56
 
 [www.kymdan.com]
-match = 4.2%%
-title = Bộ ga trải giường Kymdan
-url = https://www.kymdan.com/danh-muc/drap-trai-giuong
+match = -333.3%%
+title = Kymdan
+url = https://www.kymdan.com/home.do?lang=en
 
 [thegioidemviet.vn]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Bộ Ga Kymdan Serenity kèm vỏ mền kích thước 160 x 200cm
 url = https://shopee.vn/Bộ-Ga-Kymdan-Serenity-kèm-vỏ-mền-kích-thước-160-x-200cm-i.191696919.24000449823
 
 [tiki.vn]
-match = -25.0%%
-title = Áo bọc nệm hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=áo bọc nệm
+match = -6.2%%
+title = Bộ grab giường có mền hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ grab giường có mền
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -77,9 +77,9 @@ title = KYMDAN | Our Quality Your Comfort
 url = https://kymdan.us/en/
 
 [demxinh.vn]
-match = -37.5%%
-title = {Top 15+} Bộ chăn ga gối đệm cưới màu vàng đẹp nhất 2023
-url = https://demxinh.vn/tin-tuc/bo-chan-ga-goi-dem-cuoi-mau-vang.html
+match = 0.0%%
+title = Hướng Dẫn Sử Dụng Chiếu Điều Hòa Đúng Cách
+url = https://demxinh.vn/tin-tuc/huong-dan-su-dung-chieu-dieu-hoa-dung-cach.html
 
 [dem24h.vn]
 match = 3.1%%
