--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-24 01:35:07
+lastsearch = 2024-07-24 13:37:22
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
 match = -105.6%%
@@ -42,9 +42,9 @@ title = Nem Nuong Que Huong Air Fryer
 url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
 
 [www.youtube.com]
-match = -133.3%%
-title = Cách làm NEM CÔNG CHẢ PHƯỢNG đón Tết cực dễ, cực ...
-url = https://www.youtube.com/watch?v=aDzQbk-eQvQ
+match = -144.4%%
+title = Chuẩn VỊ NEM NƯỚNG, Bí quyết làm Nem Nướng Viên dai ...
+url = https://www.youtube.com/watch?v=C58Hlp6UXfQ
 
 [www.kymdan.com]
 match = -5.6%%
