--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-07-24 10:47:08
+lastsearch = 2024-07-24 13:43:14
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -60.0%%
-title = United States biological weapons program
-url = https://en.wikipedia.org/wiki/United_States_biological_weapons_program
+match = -21.4%%
+title = 12.12: The Day
+url = https://en.wikipedia.org/wiki/12.12:_The_Day
 
 [www.facebook.com]
 match = -160.0%%
