--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-07-24 13:17:34
+lastsearch = 2024-07-24 13:42:09
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,8 +17,8 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -86.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
+match = -36.4%%
+title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
 
 [flexhouse.vn]
