--- a/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-16.html
 lastopen = 2024-06-09 23:20:09
 
 [search]
-lastsearch = 2024-07-24 02:15:24
+lastsearch = 2024-07-24 13:51:45
 
 [shopee.vn]
 match = 35.3%%
@@ -17,14 +17,14 @@ title = Chiếu điều hòa cao su non loại tốt - Mẫu 5 - Nệm Uy Tín
 url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 
 [goni.vn]
-match = 38.2%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = 0.0%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [demxanh.com]
-match = 14.7%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [giadunganhvan.vn]
 match = 48.0%%
@@ -97,8 +97,8 @@ title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
 url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
 
 [tanhkhong.org]
-match = 16.1%%
-title = DD066 Thanh Hương : Thư Gởi Bạn
+match = 14.7%%
+title = DD066 Thanh Hương : Thư Gởi Bạn - Diễn Đàn
 url = https://tanhkhong.org/p1185a1515/5/dd066-nhu-chieu-thu-goi-ban
 
 [tchome.vn]
@@ -118,8 +118,8 @@ url = https://linhkienlammusic.com/chieu-dieu-hoa-cao-su-non-tang-kem-goi-cho-be
 
 [www.lazada.vn]
 match = -5.9%%
-title = Chiếu điều hòa cao su non , Chiếu điều hoà tencel latex ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-chieu-dieu-hoa-tencel-latex-tang-kem-2-vo-goi-da-nang-nhap-khau-loai-day-co-the-giat-may-i1719727918.html
+title = Chiếu điều hòa cao su non 3D, Chiếu điều hoà tặng kèm 2 ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-3d-chieu-dieu-hoa-tang-kem-2-vo-goi-dung-cho-mua-he-thoang-mat-da-nang-i2213525438.html
 
 [www.youtube.com]
 match = -5.9%%
