--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-24 08:06:03
+lastsearch = 2024-07-24 13:48:51
 
 [scholar.google.com]
 match = -43.8%%
@@ -112,14 +112,14 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 13/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -125.0%%
-title = Chiều 18/7 Thủy hà mã báo tin vui con gái ông 5
-url = https://www.youtube.com/watch?v=0KNcjFtCq5c
+match = -225.0%%
+title = Biến Cố Gia Đình - Tập 18 | Lồng Tiếng | Phim Bộ Tình Cảm ...
+url = https://www.youtube.com/watch?v=50B6NDlxaMI
 
 [books.google.com]
 match = -218.8%%
 title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabFTaitf&sig=ACfU3U1sdVWz2jhr12r3TxHeIPOcVAAluQ&hl=en&sa=X&ved=2ahUKEwiT85KIrL6HAxVcEkQIHaLfMMwQ6AF6BAgjEAM
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabGM5mv8&sig=ACfU3U0-R4XXolfn5qFsnnMb2vPUs61D5A&hl=en&sa=X&ved=2ahUKEwijh53eir-HAxWImokEHXX3BaYQ6AF6BAgcEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
