CI images update

--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-24 12:19:05
+lastsearch = 2024-07-24 14:19:22
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -610,4 +610,9 @@ url = https://www.govinfo.gov/content/pkg/GPO-WARRENCOMMISSIONHEARINGS-19/pdf/GP
 match = -108.7%%
 title = 1983 Beirut barracks bombing: 'The BLT Building is gone!'
 url = https://www.marinecorpstimes.com/news/your-marine-corps/2019/10/23/1983-beirut-barracks-bombing-the-blt-building-is-gone/
+
+[archive.newportbeachlibrary.org]
+match = -11.1%%
+title = Laserfiche WebLink
+url = https://archive.newportbeachlibrary.org/NBPL/DocView.aspx?id=1231099&dbid=0&repo=CNB
 
