--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-24 06:13:50
+lastsearch = 2024-07-24 14:18:38
 
 [changagoidemsonghong.com]
 match = 4.2%%
@@ -77,9 +77,9 @@ title = Các mẫu chăn ga gối đệm đẹp và đáng mua nhất hiện nay
 url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 
 [shopee.vn]
-match = -45.8%%
-title = Mua sắm online sản phẩm Chăn, Ga, Gối & Nệm giá tốt
-url = https://shopee.vn/Chăn-Ga-Gối-Nệm-cat.11036670.11036683
+match = -75.0%%
+title = {1}Bộ ga thun 4 món 16 màu drap giường thun lạnh Hàn ...
+url = https://shopee.vn/-1-Bộ-ga-thun-4-món-16-màu-drap-giường-thun-lạnh-Hàn-Quốc-i.11438690.167422602
 
 [demxanh.com]
 match = -54.2%%
