--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-24 10:20:16
+lastsearch = 2024-07-24 14:19:33
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -18,8 +18,8 @@ url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-de
 
 [songhongonline.vn]
 match = 50.0%%
-title = Bộ chăn ga gối SH_UC24 102
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-102
+title = Bộ chăn ga gối SH_UT24 203
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-ut24-203
 
 [changagoidemsonghong.com]
 match = -29.0%%
