--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-24 13:26:20
+lastsearch = 2024-07-24 14:13:06
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVLHYp5a&sig=ACfU3U0JrBuUq8PXhthMEB4zhzC5msZH5Q&hl=en&sa=X&ved=2ahUKEwiz0KTahb-HAxWLFlkFHU7RC1UQ6AF6BAgYEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWVLH-n5f&sig=ACfU3U3MjCwZPl7MzxkmIYjE8v0HXY4Y5w&hl=en&sa=X&ved=2ahUKEwjEz5GUkL-HAxW9MlkFHWx4BGEQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
