--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-24 13:25:47
+lastsearch = 2024-07-24 14:16:02
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfqHFomc&sig=ACfU3U3v8jVAvqWQTbyMV66pRRxbglI_Pg&hl=en&sa=X&ved=2ahUKEwjIm8DKhb-HAxXGFFkFHSdFDHgQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlfqHIoo7&sig=ACfU3U0DaSvhyGBt5r8S9hzXyXEe7khX9g&hl=en&sa=X&ved=2ahUKEwj-3vbnkL-HAxX4LFkFHcDsCq0Q6AF6BAgWEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
