--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-24 11:48:09
+lastsearch = 2024-07-24 14:12:21
 
 [m.youtube.com]
 match = -144.4%%
@@ -44,7 +44,7 @@ url = https://www.grab.com/vn/en/food-blog/trending-food/tphcm-bun-nem-nuong-sie
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOorM2XjTMXeL_5wyF9sQJ9lCFAXEruOHXCNxtRAlcgRdCbB9-zPH
+url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [shopcamping.vn]
 match = -144.4%%
