--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-24 13:45:26
+lastsearch = 2024-07-24 14:20:01
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.5%%
-title = Frederick Hecht, MD
-url = https://profiles.ucsf.edu/frederick.hecht
+match = 10.0%%
+title = Joan Hilton, DSc, MPH
+url = https://profiles.ucsf.edu/joan.hilton
 
 [cityofclovis.com]
 match = -65.0%%
@@ -47,9 +47,9 @@ title = ADG465 Datasheet by Analog Devices Inc. | Digi-Key Electronics
 url = https://www.digikey.jp/htmldatasheets/production/51516/0/0/1/adg465.html
 
 [fsapartners.ed.gov]
-match = -45.0%%
-title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
+match = -60.0%%
+title = 2023-2024 Federal School Code List Q1
+url = https://fsapartners.ed.gov/sites/default/files/2022-10/2324FedSchoolCodeList.xlsx
 
 [finaid.org]
 match = 0.0%%
