--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-24 13:50:40
+lastsearch = 2024-07-24 14:18:18
 
 [www.lazada.vn]
 match = -27.8%%
@@ -124,7 +124,7 @@ url = https://www.initse.com/ende/investors/investor-relations/
 [docs.elsegundo.org]
 match = 5.6%%
 title = Laserfiche WebLink
-url = https://docs.elsegundo.org/WebLink8/0/doc/375082/Page3.aspx
+url = https://docs.elsegundo.org/WebLink/doc/375082/Page2.aspx?repo=COES&dbid=0
 
 [www.medicare.gov]
 match = 5.6%%
@@ -325,4 +325,9 @@ url = http://www2.mnhs.org/library/findaids/00702/pdfa/00702-00144.pdf
 match = -111.1%%
 title = What oil pan baffle do you guys run? - K20A.org
 url = https://www.k20a.org/threads/what-oil-pan-baffle-do-you-guys-run.73266/
+
+[www.energy.gov]
+match = -44.4%%
+title = Emergency Preparedness Report
+url = https://www.energy.gov/sites/default/files/2022-11/1981-Emergency_Preparedness_for_Interruption_of_Petroleum_Imports into_US.pdf
 
