CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-24 13:48:51
+lastsearch = 2024-07-24 14:53:12
 
 [scholar.google.com]
 match = -43.8%%
@@ -17,8 +17,8 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.thegioididong.com]
-match = -231.2%%
-title = 2 cách đo size vòng tay, lắc tay chính xác đơn giản nhất tại ...
+match = 0.0%%
+title = 
 url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chinh-xac-don-gian-nhat-1401980
 
 [dangcongsan.vn]
@@ -398,8 +398,8 @@ url = https://danhmuchanhchinh.gso.gov.vn/Doi_Chieu_Moi.aspx
 
 [vietstock.vn]
 match = -225.0%%
-title = Phân tích kỹ thuật phiên chiều 18/07: Tâm lý thận trọng bao ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1807-tam-ly-than-trong-bao-trum-thi-truong-585-1208616.htm
+title = Phân tích kỹ thuật phiên chiều 24/07: Tín hiệu rủi ro vẫn còn
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2407-tin-hieu-rui-ro-van-con-585-1211013.htm
 
 [nongnghiep.vn]
 match = -12.5%%
@@ -550,4 +550,9 @@ url = https://flytoskycharity.vn/tin-tuc/ky-nang-tinh-nguyen/danh-ba-cac-to-chuc
 match = -68.8%%
 title = Thoại Bất Kể Tính điện Máy TV Hay
 url = https://kap21.fr/28282179-pim-xet-chăm-soc-vo-com.html
+
+[baotainguyenmoitruong.vn]
+match = -143.8%%
+title = Hà Nội: Nhiều điểm ngập úng, giao thông khó khăn
+url = https://baotainguyenmoitruong.vn/ha-noi-nhieu-diem-ngap-ung-giao-thong-kho-khan-377144.html
 
