--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-24 12:16:25
+lastsearch = 2024-07-24 14:49:33
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -245,4 +245,14 @@ url = https://phunuso.baophunuthudo.vn/6-my-nhan-ru-bo-toc-dai-chan-ai-lot-xac-v
 match = 10.7%%
 title = TUYÊN NGÔN QUỐC TẾ NHÂN QUYỀN, 1948
 url = http://www.nhanquyen.vn/images/File/53sach tuyen ngon nhan quyen 1948.pdf
+
+[www.vinmec.com]
+match = -42.9%%
+title = 10 dấu hiệu cho thấy con bạn bị dị ứng chứ không phải ...
+url = https://www.vinmec.com/vie/bai-viet/10-dau-hieu-cho-thay-con-ban-bi-di-ung-chu-khong-phai-cam-lanh-vi/
+
+[cdc.thuathienhue.gov.vn]
+match = 0.0%%
+title = Điểm báo ngày 10/10/2021-11/10/2021
+url = https://cdc.thuathienhue.gov.vn/DichVu/ThongTin/CapNhat/prints.aspx?tinid=76150
 
