--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-24 14:12:55
+lastsearch = 2024-07-24 14:44:52
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -52,9 +52,9 @@ title = Điện thoại Xiaomi Redmi K60 5G (Snapdragon 8+ Gen 1
 url = https://mobilecity.vn/dien-thoai/xiaomi-redmi-k60.html
 
 [www.youtube.com]
-match = -242.9%%
-title = [Phim Việt Nam] TRÁI TIM MÀU XANH | Tập 16 | Phim Tâm Lý ...
-url = https://www.youtube.com/watch?v=3ybqAT8S9Pw
+match = -121.4%%
+title = André Rieu - The Beautiful Blue Danube
+url = https://www.youtube.com/watch?v=IDaJ7rFg66A
 
 [www.gadgets360.com]
 match = 0.0%%
@@ -113,8 +113,8 @@ url = https://www.webmd.com/vitamins/ai/ingredientmono-960/green-tea
 
 [en.wikipedia.org]
 match = 7.1%%
-title = Color blindness
-url = https://en.wikipedia.org/wiki/Color_blindness
+title = Little green men
+url = https://en.wikipedia.org/wiki/Little_green_men
 
 [www.yeastdriven.com]
 match = -114.3%%
