--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-24 06:45:30
+lastsearch = 2024-07-24 14:52:18
 
 [xoptraisan.info]
 match = 17.6%%
@@ -17,9 +17,9 @@ title = thảm nỉ xốp gỗ 60
 url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 
 [thamaulac.com.vn]
-match = -29.4%%
-title = Thảm nỉ ghép 60x60cm Kẻ đỏ, kẻ ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-ke-do-ghi
+match = -41.2%%
+title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
+url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
 
 [vatlieulotsan.com]
 match = -76.5%%
@@ -42,9 +42,9 @@ title = THẢM XỐP TRẢI SÀN | Hanoi
 url = https://www.facebook.com/xoplotsan/
 
 [thamsami.com]
-match = -76.5%%
-title = Thảm xốp mặt nỉ hoa văn Âu Lạc 60*60*10 tấm
-url = http://thamsami.com/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam
+match = -111.8%%
+title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ
+url = http://thamsami.com/san-pham/314/tham-xop-mat-ni-hoa-van-au-lac-60-60-10-tam.html
 
 [ahamart.com.vn]
 match = -211.8%%
