--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-24 11:16:46
+lastsearch = 2024-07-24 15:20:53
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -17,13 +17,13 @@ title =
 url = https://en.wikipedia.org/wiki/TUI_Group
 
 [www.tuigroup.com]
-match = -300.0%%
-title = TUI Group – The one of the world's leading tourism groups
-url = https://www.tuigroup.com/en-en
+match = -250.0%%
+title = TUI brand name may no longer be used by TUI Russia
+url = https://www.tuigroup.com/en-en/media/press-releases/2022/2022-03-10-tui-terminates-agreement
 
 [www.tui.nl]
-match = -316.7%%
-title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - Japan
+match = -300.0%%
+title = 16-dg cruise Azië - Noordam (Rondreis) - Zuid-Korea - TUI
 url = https://www.tui.nl/16-dg-cruise-azie-noordam-519967721/
 
 [embraer.com]
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -41.7%%
-title = Find & Book Flights
-url = https://www.tui.co.uk/flight/
+match = 36.4%%
+title = tui sitemap
+url = https://www.tui.co.uk/sitemap
 
 [maritime-executive.com]
 match = -316.7%%
@@ -437,8 +437,8 @@ title = Argentina passes repayment deal, South Korea industry up, TUI up
 url = https://ukinvestormagazine.co.uk/morning-round-argentina-passes-repayment-deal-south-korea-industry-tui/?amp=1
 
 [www.ch-aviation.com]
-match = -183.3%%
-title = TUI Group set to end B737-700 ops by 2027
+match = -233.3%%
+title = TUI Group set to end B737-700 ops by 2027 - ...
 url = https://www.ch-aviation.com/news/139065-tui-group-set-to-end-b737-700-ops-by-2027
 
 [www.ainonline.com]
