--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-24 13:46:03
+lastsearch = 2024-07-24 15:21:02
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -42,9 +42,9 @@ title = Chăn ga gối Sông Hồng dòng Basic mã BC-14
 url = https://songhong.info/chan-ga-goi-bc14
 
 [demxanh.com]
-match = -28.6%%
-title = Bộ ga gối chun chần xơ đậu nành mã 14 Khủng long
-url = https://demxanh.com/bo-ga-goi-chun-chan-xo-dau-nanh-ma-14-khung-long.html
+match = -52.4%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
 
 [everonletrongtan.com]
 match = 19.0%%
