--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-24 12:12:25
+lastsearch = 2024-07-24 15:15:37
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
 url = https://songhong.info/chan-ga-goi-bc16
 
 [demxanh.com]
-match = -52.4%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
+match = -19.0%%
+title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
+url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
 match = -33.3%%
@@ -27,9 +27,9 @@ title = Bộ ga chun Velina V16 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -23.8%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [everonletrongtan.com]
 match = 19.0%%
