--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-24 05:50:49
+lastsearch = 2024-07-24 15:17:49
 
 [shopee.vn]
-match = -28.0%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -8.0%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [tiki.vn]
 match = -16.0%%
@@ -295,4 +295,9 @@ url = https://www.kkday.com/vi/product/134232
 match = -52.0%%
 title = Top Hay Mar Loan Nhất · 2024 Phim Dị Kinh Đài 31
 url = https://sashepherdcollege.co.za/86345612-phimsec-đaì-loan.html
+
+[hanoimoi.vn]
+match = -40.0%%
+title = Đài Loan (Trung Quốc) gấp rút ứng phó bão lớn
+url = https://hanoimoi.vn/dai-loan-trung-quoc-gap-rut-ung-pho-bao-lon-672881.html
 
