--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-24 13:40:41
+lastsearch = 2024-07-24 15:16:09
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -243.8%%
-title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
-url = https://www.youtube.com/watch?v=0vPz1cnaTNM
+match = -150.0%%
+title = TÌNH CỜ TÌM ĐƯỢC NGƯỜI THÂN VÔ GIA CƯ Ở MỸ QUA ...
+url = https://www.youtube.com/watch?v=6598XYpaW3E
 
 [hawater.com.vn]
 match = -75.0%%
@@ -102,9 +102,9 @@ title = PG-1
 url = https://yamaha-motor.com.vn/xe/pg-1-bns1/
 
 [tuoitre.vn]
-match = -181.2%%
-title = Tấm thép chỏng chơ trên đường, dân sợ té ngã lọt gầm ...
-url = https://tuoitre.vn/tam-thep-chong-cho-tren-duong-dan-so-te-nga-lot-gam-container-20240723142857395.htm
+match = -200.0%%
+title = 'Anh hùng không áo choàng' vạch trần chiêu trò bán xe ...
+url = https://tuoitre.vn/anh-hung-khong-ao-choang-vach-tran-chieu-tro-ban-xe-toyota-hong-nang-doi-lot-sua-duoc-20240724092914719.htm
 
 [www.apple.com]
 match = 0.0%%
