--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-24 14:53:12
+lastsearch = 2024-07-24 15:16:53
 
 [scholar.google.com]
 match = -43.8%%
@@ -17,8 +17,8 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.thegioididong.com]
-match = 0.0%%
-title = 
+match = -231.2%%
+title = 2 cách đo size vòng tay, lắc tay chính xác đơn giản nhất tại ...
 url = https://www.thegioididong.com/hoi-dap/2-cach-do-size-vong-tay-lac-tay-chinh-xac-don-gian-nhat-1401980
 
 [dangcongsan.vn]
@@ -555,4 +555,14 @@ url = https://kap21.fr/28282179-pim-xet-chăm-soc-vo-com.html
 match = -143.8%%
 title = Hà Nội: Nhiều điểm ngập úng, giao thông khó khăn
 url = https://baotainguyenmoitruong.vn/ha-noi-nhieu-diem-ngap-ung-giao-thong-kho-khan-377144.html
+
+[audioclear.fr]
+match = -187.5%%
+title = Phim Rạp Cởi Sạch Gái Trong đồ Xinh Chiếu - Audio Clear
+url = https://audioclear.fr/6723954-chiếu-phim-cởi-đồ-rạp-gái-trong-xinh-sạch.html
+
+[aliasdebarras.fr]
+match = -31.2%%
+title = 18 To Mông Hàn Quốc Bạn Gái
+url = https://aliasdebarras.fr/2529798-bạn-quốc-hàn-18-gái-mông-to.html
 
