CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-24 13:19:12
+lastsearch = 2024-07-24 15:32:24
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -585,4 +585,9 @@ url = https://la34.com.vn/tri-thuc-kieu-bao-cam-phuc-tam-guong-vi-nuoc-vi-dan-cu
 match = -193.8%%
 title = Khám phá Yellowstone – Tuyệt tác thiên nhiên của nước Mỹ
 url = https://eurotravel.com.vn/kham-pha-yellowstone-tuyet-tac-thien-nhien-cua-nuoc-my/
+
+[amiensaikido.fr]
+match = -150.0%%
+title = Nhà Gái Nghỉ Xinh - – Học sinh mông đẹp Vừa địt
+url = https://amiensaikido.fr/3359461-xinh-nghỉ-nhà-gái.html
 
