--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-24 14:13:39
+lastsearch = 2024-07-24 15:34:55
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=LnV3t5bBfcs
 [books.google.com]
 match = -250.0%%
 title = Ngô Thì Nhậm, tác phẩm - Volume 1 - Page 83 - Google Books Result
-url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSVJe1Y9a&sig=ACfU3U1Mz9rXabaAeORBXrGR4Qgh5HdWWg&hl=en&sa=X&ved=2ahUKEwjsmoakkL-HAxVvFFkFHS2gDfEQ6AF6BAgbEAM
+url = https://books.google.com/books?id=cYNkAAAAMAAJ&pg=PA83&lpg=PA83&dq=chieu+lac+soc+16&source=bl&ots=cgSVJfYWgf&sig=ACfU3U2S9RoO9ZxOH7E5Sq3BSDYgnKoFSw&hl=en&sa=X&ved=2ahUKEwjSsfm4or-HAxWTC3kGHS3yBUgQ6AF6BAgfEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
