--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-24 10:20:47
+lastsearch = 2024-07-24 15:33:09
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = 42.9%%
-title = chiếu nhựa thái 1m8x3m - sp 66677
-url = https://www.sendo.vn/chieu-nhua-thai-1m8x3m-37120771.html
+match = -7.1%%
+title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
+url = https://www.sendo.vn/chieu-nhua-van-phong.htm
 
 [mia.vn]
 match = -39.3%%
