CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-24 13:46:44
+lastsearch = 2024-07-24 16:19:16
 
 [www.tiktok.com]
 match = -35.3%%
@@ -69,7 +69,7 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 [books.google.com]
 match = -158.8%%
 title = The Monthly Army List - Page 23 - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmnc73dU&sig=ACfU3U2Oiy-re3tInGMLj40Z23FoZH4hsQ&hl=en&sa=X&ved=2ahUKEwjMyOuhir-HAxW8g4kEHY_GAb4Q6AF6BAgZEAM
+url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA68-PA23&lpg=RA68-PA23&dq=man+in+hoa+dep+16&source=bl&ots=kbdmnd64iW&sig=ACfU3U0IQzZ6F4kUz5HF33F3bawoFWvVBg&hl=en&sa=X&ved=2ahUKEwjdue-trL-HAxW0C3kGHfCYA4EQ6AF6BAgXEAM
 
 [tax.vermont.gov]
 match = -29.4%%
@@ -77,8 +77,8 @@ title = Home | Department of Taxes
 url = http://tax.vermont.gov/home
 
 [tienphong.vn]
-match = -188.2%%
-title = Hoa hậu Mai Phương đẹp mặn mà, 'tái xuất' sau 16 năm đăng ...
+match = -158.8%%
+title = Hoa hậu Mai Phương đẹp mặn mà, 'tái xuất' sau 16 năm ...
 url = https://tienphong.vn/hoa-hau-mai-phuong-dep-man-ma-tai-xuat-sau-16-nam-dang-quang-post1030869.tpo
 
 [floridadep.gov]
@@ -137,9 +137,9 @@ title = Top 19 laptop màn hình đẹp làm đồ họa, lên màu chuẩn ...
 url = https://www.thegioididong.com/game-app/top-14-laptop-man-hinh-dep-lam-do-hoa-len-mau-chuan-nhat-2021-1407877
 
 [www.elleman.vn]
-match = -58.8%%
-title = hình ảnh đẹp - ELLE MAN việt nam (16)
-url = https://www.elleman.vn/van-hoa-giai-tri/hinh-anh-dep-lan-toa-nhat-2018/attachment/hinh-anh-dep-elle-man-viet-nam-16/
+match = -11.8%%
+title = buc anh dep - elle man - 16
+url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-43-13-pm-2/
 
 [vnmedia.vn]
 match = -164.7%%
@@ -387,9 +387,9 @@ title =
 url = https://www.lawinsider.com/dictionary/association-rules
 
 [cafef.vn]
-match = -170.6%%
-title = Nữ NSND là "hoa khôi màn ảnh" lừng lẫy, tuổi 80 vẫn đẹp ...
-url = https://cafef.vn/nu-nsnd-la-hoa-khoi-man-anh-lung-lay-tuoi-80-van-dep-quyen-quy-chong-cung-la-dien-vien-noi-tieng-188240705203857435.chn
+match = -194.1%%
+title = Chỉ cần chi 99 triệu đồng, người Việt có thể tậu được mẫu ...
+url = https://cafef.vn/chi-can-chi-99-trieu-dong-nguoi-viet-co-the-tau-duoc-mau-suv-dep-nhu-toyota-fortuner-che-mua-che-nang-dieu-hoa-mat-ruoi-hon-dut-di-xe-may-188240714145958555.chn
 
 [www.quora.com]
 match = -152.9%%
@@ -525,4 +525,9 @@ url = https://www.traveloka.com/vi-vn/explore/destination/thung-lung-man-na-ka/2
 match = -188.2%%
 title = Kỳ họp thứ 18 (kỳ họp thường lệ giữa năm), HĐND thành ...
 url = http://anhp.vn/ky-hop-thu-18-ky-hop-thuong-le-giua-nam-hdnd-thanh-pho-khoa-16-thanh-cong-tot-dep----thong-qua-34-nghi-quyet-d61337.html
+
+[vnexpress.net]
+match = -111.8%%
+title = Sắc vóc người đẹp đóng phim kinh dị về Tấm Cám
+url = https://vnexpress.net/sac-voc-nguoi-dep-dong-phim-kinh-di-ve-tam-cam-4770681.html
 
