--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-24 13:41:47
+lastsearch = 2024-07-24 16:13:34
 
 [everonvn.com.vn]
-match = 0.0%%
-title = Vỏ Gối Everon Giảm Giá Es1366
-url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366?srsltid=AfmBOorLZtZ48wrM_nMxudue-TNoCs-otKaAQ01etq9UFyk0WjIKkl5g
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOoog4tWrMDzvfmFJwC2aNTbRblzJK3LtqpJkT6-yt5tKYoaExfIf
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,12 +34,12 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 5.6%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOopCJfbcwLYyJr7RoM12M8MGtW_TtglI1GBb-lxT4IeJnTJA9yH_
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
 
 [www.everonqb.com]
 match = -111.1%%
-title = Vỏ gối EPM21072 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epm21072-45x65.html
+title = Vỏ gối EPC21054 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-epc21054-45x65.html
 
 [shopee.vn]
 match = -127.8%%
