CI images update

--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-24 15:20:33
+lastsearch = 2024-07-24 16:29:27
 
 [www.diepxuan.com]
 match = 27.3%%
@@ -67,14 +67,14 @@ title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
 url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [jysk.vn]
-match = -81.8%%
-title = 6 Drawer Chest TRAPPEDAL Oak/Black - JYSK.vn
-url = https://jysk.vn/en-US/6-drawer-chest-trappedal-oak-black
+match = -63.6%%
+title = Bed frame HASLEV 160x200 dark grey - JYSK.vn
+url = https://jysk.vn/en-US/bed-frame-haslev-160x200-dark-grey
 
 [blanc.vn]
 match = 9.1%%
-title = Thảm trải sàn Hira Be sợi đay
-url = https://blanc.vn/tham-hira-be-ts
+title = Thảm trải sàn Hira Ghi sợi đay
+url = https://blanc.vn/tham-hira-ghi-ts
 
 [noithatkenli.vn]
 match = -27.3%%
