--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-24 11:45:52
+lastsearch = 2024-07-24 16:29:07
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -28,8 +28,8 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
 match = -66.7%%
-title = Tấm Trải K-Bedding By Everon ngủ văn phòng, dã ngoại ...
-url = https://www.lazada.vn/products/tam-trai-everon-lite-ngu-van-phong-da-ngoai-co-the-gap-gon-giao-mau-ngau-nhien-i708164619.html
+title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/tam-trai-everon/
 
 [www.everonvn.vn]
 match = -20.8%%
