--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-24 14:52:52
+lastsearch = 2024-07-24 16:30:53
 
 [demxanh.com]
 match = -131.6%%
 title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html
+url = https://demxanh.com/tam-trang-tri-khach-san.html?srsltid=AfmBOorP15cvA6CfhXb4C29RZ-CQFVprb5TonreYuTOyMY9nRbSHY6gx
 
 [thegioidemviet.vn]
 match = -73.7%%
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -94.7%%
-title = 10 Khách sạn Sang trọng nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-zff12-Australia-Hotels.html
+match = -73.7%%
+title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
