--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-24 14:20:01
+lastsearch = 2024-07-24 16:32:44
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -47,9 +47,9 @@ title = ADG465 Datasheet by Analog Devices Inc. | Digi-Key Electronics
 url = https://www.digikey.jp/htmldatasheets/production/51516/0/0/1/adg465.html
 
 [fsapartners.ed.gov]
-match = -60.0%%
-title = 2023-2024 Federal School Code List Q1
-url = https://fsapartners.ed.gov/sites/default/files/2022-10/2324FedSchoolCodeList.xlsx
+match = -45.0%%
+title = 2023-2024 Federal School Code List
+url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
 
 [finaid.org]
 match = 0.0%%
@@ -172,9 +172,9 @@ title = EPA's Reanalysis of Key Issues Related to Dioxin Toxicity and ...
 url = https://cfpub.epa.gov/ncea/iris/iris_documents/documents/supdocs/dioxinv1sup.pdf
 
 [cps-vo.org]
-match = -140.0%%
-title = Registrants | Cyber-Physical Systems Virtual Organization
-url = https://cps-vo.org/group/satc-pimtg22/registrants
+match = -130.0%%
+title = Attendees | Cyber-Physical Systems Virtual Organization
+url = https://cps-vo.org/group/satc-pimtg22/attendees
 
 [backend.daikincomfort.com]
 match = -28.6%%
