--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-24 11:39:36
+lastsearch = 2024-07-24 16:29:18
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -21.1%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -10.5%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [som.cuanschutz.edu]
 match = -110.5%%
@@ -187,9 +187,9 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -178.9%%
-title = Identification of 12 new susceptibility loci for different ...
-url = https://pubmed.ncbi.nlm.nih.gov/28346442/
+match = -142.1%%
+title = Upper Limits on the Stochastic Gravitational-Wave ...
+url = https://pubmed.ncbi.nlm.nih.gov/28388180/
 
 [www.sjsu.edu]
 match = -105.3%%
