CI images update

--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-07-24 08:00:43
+lastsearch = 2024-07-24 16:47:54
 
 [burningman.org]
 match = 0.0%%
@@ -154,7 +154,7 @@ url = https://boardofwatersupply.com/appGgWZQDXVkf
 [steamcommunity.com]
 match = -53.3%%
 title = Cộng đồng Steam :: Dawn of Man
-url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=196
+url = https://steamcommunity.com/app/858810/discussions/search/?l=vietnamese&q=Workload&sort=time&p=10
 
 [register.fca.org.uk]
 match = -6.7%%
@@ -785,4 +785,9 @@ url = http://ph.lacounty.gov/masks
 match = -53.3%%
 title = WEAU | Homepage | Wisconsin
 url = https://www.weau.com/
+
+[humane.com]
+match = -33.3%%
+title = Humane: Ai Pin - Wearable Ai
+url = https://humane.com/
 
