--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-24 14:47:43
+lastsearch = 2024-07-24 16:48:37
 
 [www.instagram.com]
 match = -161.5%%
@@ -152,8 +152,8 @@ title = Get To Know The 15 Biggest Art Collectors In Hong Kong
 url = https://www.tatlerasia.com/lifestyle/arts/hk-get-to-know-the-15-biggest-art-collectors-in-hong-kong
 
 [www.dailymail.co.uk]
-match = -284.6%%
-title = Ex showbiz reporter becomes the richest woman in Hong ...
+match = -230.8%%
+title = Ex showbiz reporter becomes the richest woman ...
 url = https://www.dailymail.co.uk/news/article-4275540/Ex-showbiz-reporter-richest-woman-Hong-Kong.html
 
 [m.facebook.com]
