--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-24 16:32:11
+lastsearch = 2024-07-24 16:45:17
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -27,9 +27,9 @@ title = Đèn chiếu điểm HT MAX LIGHT
 url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/den-chieu-diem-htlight
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -206.7%%
+title = Đèn pha LED: giải pháp tối ưu cho chiếu sáng ngoài trời
+url = https://www.htlightlevel.vn/den-pha-led-chieu-sang-ngoai-troi/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
