--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-24 13:20:28
+lastsearch = 2024-07-24 16:48:49
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -147.6%%
-title = The Common Law Procedure Act (15 and 16 Vict. Cap. 76), with ...
-url = https://books.google.com/books?id=Rd65o39JZoAC&pg=PR41-IA1&lpg=PR41-IA1&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ni5C_bRFiB&sig=ACfU3U3O2KoimjDjMceuByRQ8daY9lKSuA&hl=en&sa=X&ved=2ahUKEwiF_qmyhL-HAxVXN2IAHaqTB08Q6AF6BAhBEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKBw4Aspp&sig=ACfU3U0T384EtiMD8uxyCqLvDTKaN54Zfw&hl=en&sa=X&ved=2ahUKEwjZzZP7sr-HAxX2L0QIHaYeByMQ6AF6BAgeEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -158,8 +158,8 @@ url = https://www.vulture.com/2021/03/kimbra-interview-gotye-somebody-that-i-use
 
 [aemo.com.au]
 match = -114.3%%
-title = Record Demand in South Australia & Victoria 28 to 31 ...
-url = https://aemo.com.au/-/media/files/electricity/nem/market_notices_and_events/market_event_reports/archive/180-0091-pdf.pdf
+title = NEM Reform Electricity Wholesale Consultative Forum ( ...
+url = https://aemo.com.au/-/media/files/stakeholder_consultation/working_groups/other_meetings/electricity-wholesale-consultative-forum/meeting-16-presentation.pdf?la=en
 
 [www.nitrc.org]
 match = -21.4%%
